# DTGBot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-compose_certbot.yml  docker-compose_old.yml  pyproject.toml  todo.md
.github/workflows/: deploy.yml
alembic/: env.py
data/: guru_init.json
deploy/: browser_sync.py  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  run-dev.sh  update-db.sh
deploy/server/leg/: default_new_bk.conf
deploy/server/nginx/: Dockerfile  default.conf  default.conf.https  lets_encrypt.conf
deploy/server/nginx/conf.d/: default.conf  http.conf  https.conf
deploy/server/nginx/no_ssl/: dev.conf
reqs/: guru.exampleenv  requirements.txt
src/DTGBot/common/: database.py  dtg_config.py  dtg_types.py  guru_config.py
src/DTGBot/common/models/: episode_m.py  guru_m.py  links.py  maps.py  reddit_m.py  response_models.py
src/DTGBot/fapi/: admin_route.py  app.py  episode_route.py  guru_route.py  red_route.py  search_paginate.py  shared.py  sql_stmts.py
src/DTGBot/frontend/: app.py
src/DTGBot/frontend/routes/: episode_route.py
src/DTGBot/frontend/static/: style.css  styles.css  tw_style.css
src/DTGBot/frontend/static/css/: card_style.css  detail_style.css  style.css
src/DTGBot/frontend/templates/: base.html  infinite_scroll.html  main_test.html  paginate.html
src/DTGBot/frontend/tw/: package-lock.json  package.json
src/DTGBot/updater/: dtg_bot.py  gurunames.txt  update_db.py  updaters.py
tests/: conftest.py  test_app.py  test_dtgbot.py
(+9 files in other folders)
